# libardeck

./: Cargo.toml
.zed/: settings.json
ardeck/: Cargo.toml
ardeck/src/: lib.rs  store.rs
ardeck_derive/tests/: test.rs
src/: device.rs  lib.rs
src/device/: dec.rs  switch.rs
