[package]
name = "ardeck"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
log = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serialport = "4.8.1"


[features]
all = ["device", "config", "store"]
device = []
config = []
store = []
